# budget_dance

./: .env  .gitignore  .pdm-python  404.html  LICENSE.txt  MANIFEST.in  README.md  bloated_req.txt  index.html  mkdocs.yml  mkfav  pdm_build.py  pylintrc  pyproject.toml  reqs_material.txt  requirements-dev.txt  requirements.txt  setup_schema.yaml  sitemap.xml  sorted_vba.txt
accounting/: index.html
anti_patterns/: index.html
appendix/: index.html
budget_dance.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
dance/: __init__.py  accounts_load.py  balance_check.py  balances_load.py  bank_actl_load.py  bracket_fix.py  extract_table.py  help.py  iande-actl-load.py  iande_actl_load.py  integrity.py  invest_actl_load.py  invest_iande_load.py  ira-distr.py  ira_distr.py  other_actls.py  payroll_savings.py  preserve_changed.py  retire_load.py  taxes_load.py  transfers_actl_load.py  utility.py  ytd.py
dance/book/: add_sheets.py  create.py  create_wb.py  local_data.py  remote_data.py  setup_schema.json
dance/experimental/: __init__.py  hack.py  named.py  preserve_changed.py  ref_col.py  reseal.py  reveal.py  rewrite.py  table_check.py  test.yaml  test_schema.json
dance/setup/: calc_props.py  create_wb.py  cross_check.py  hack.py  lambdas.py  local_data.py  parse_formula.py  remote_data.py  scratch.yaml  setup.yaml  setup_schema.json  setup_tabs.py  test.yaml  test_schema.json
dance/themes/: Badge.xml  Vapor Trail.xml
dance/util/: __init__.py  balance_check.py  books.py  bracket_fix.py  build  build_book.py  build_open  build_test  create_wb.py  cross_check.py  data_validation.py  doc_lambda.py  doc_preserve.py  excel_save.applescript  excel_save.scpt  extract_table.py  extract_vba.py  files.py  find_vba  helpers.py  index_tables.py  inspect_inv_inc.py  lexers.py  logs.py  match_retro.py  md_account_rename.py  md_names.py  prompts.py  reformulate.py  reformulate_dt_cols.py  reformulate_get_val.py  refresh_test_data.py  reseal.py  reveal.py  rotate_test_values.py  row_tree.py  setup_tabs.py  sheet.py  sort_vba.py  tables.py  (+8 more)
dance/z-archive/: divhist.py  fix_iande.py  import_budget.py  old_ranges.py
data/: config.yaml
data_files/: index.html
data_from_moneydance/: index.html
docs/: .buildinfo  Makefile  accounting.md  anti_patterns.md  appendix.md  cli.html  configuration.md  configuration_summary.md  configure_api.md  data_files.md  data_from_moneydance.html  data_from_moneydance.md  deployment.md  excel_lambdas.md  fcast.html  fcast.md  fcast_flow.dot  genindex.html  idioms.md  index.html  index.md  libraries.md  objects.inv  operations.md  preserve.md  py-modindex.html  python.md  report_configs.md  schema_validation.md  searchindex.js  setup.md  setup_control.md  setup_summary.md  spreadsheet.md  use_cases.md  validation.md  vba_index.html  vba_index.md  vba_notes.md  vba_sorted.md  (+2 more)
docs/.doctrees/: cli.doctree  fcast.doctree
docs/_autosummary/: balance_check.html  dance.balance_check.html  dance.bank_actl_load.html  dance.bracket_fix.html  dance.html  dance.integrity.html  dance.invest_actl_load.html  dance.ira_distr.html  dance.util.extract_vba.html  dance.util.logs.html  dance.util.oledump.html  (+2 more)
excel_lambdas/: index.html
fcast/: index.html
idioms/: index.html
images/: file  magick_test  mkfav  mklogo  preprocess_images
libraries/: index.html
operations/: index.html
preserve/: index.html
python/: index.html
report_configs/: index.html
search/: search_index.json
setup/: index.html
setup_api/: index.html
setup_control/: index.html
setup_summary/: index.html
site/: 404.html  index.html
sphinx_docs/: Makefile  fcast_vba.md  index.md  objects.inv  rst_test.html  setup.html
spreadsheet/: index.html
tests/: balance_check.py  cross_check.py  helpers.py  iande_check.py  test_columns.py  test_formula.py
themes/: Berlin.xml
use_cases/: index.html
validation/: index.html
vba/: [Content_Types].xml  fcast.vb  fcast_sorted.vb  fcast_vba.md  fcast_vba.txt  sharedStrings.xml  sorted_vba.txt  workbook.xml.rels
vba_index/: index.html
vba_notes/: index.html
vba_sorted/: index.html
versions/: current.json  set.py
workbook/: index.html
worksheets/: index.html
z-archive/: vba_sorted copy.md
(+104 files in other folders)
