[project]
name = "budget-dance"
version = "0.1.0"
description = "Tool links accounting data with long term plans"
authors = [
    {name = "George Dobbs", email = "george.dobbs@gmail.com"},
]
dependencies = [
    "openpyxl>=3.1.2",
    "pandas>=2.2.2",
    "pyYAML>=6.0.1",
    "requests>=2.31.0",
    "beautifulsoup4>=4.12.3",
    "lxml>=5.2.1",
    "tabulate>=0.9.0",
]
requires-python = ">=3.11"
readme = "README.md"
license = {text = "BSD2"}

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
exclude=["data*","docs*","images*","site*","tmp*", "private*"]

[tool.pdm]
distribution = true

[tool.setuptools.package-data]


[tool.pdm.dev-dependencies]
dev = [
    "mkdocs>=1.6.0",
    "mkdocs-material>=9.5.20",
    "pyperclip>=1.8.2",
]
test = [
    "pytest>=8.2.0",
    "pyinstrument>=4.6.2",
]

[tool.pdm.build]
excludes = ["dance/experimental/"]

[project.scripts]
ytd = "dance.ytd:main"
build_book = "dance.util.build_book:main"

